cree hoja de estilo para el ejercicio 10

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
     
 </body>
-<script src="./JS/08-Ejercicio-8.js"></script>
+<script src="./JS/10-Ejercicio-10.js"></script>
 </html>
